--- a/css/style.css
+++ b/css/style.css
@@ -247,3 +247,6 @@ code {
     -webkit-text-fill-color: transparent;
 }
 
+.text-7xl {
+    line-height: 1.2 !important;
+}
